# QT_Advanced_case_Studies

./: CMakeLists.txt  README.md  dashboard.cpp  dashboard.h  dbushandler.cpp  dbushandler.h  main.cpp  monitor.cpp  monitor.h  myclass.cpp  myclass.h  sender.cpp  sender.h  worker.cpp  worker.h
